--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\input{article preambles}
+\input{book preambles}
 
 \setcounter{section}{-1}
 
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-	\title{Arithmetic differential geometry}
+	\title{Arithmetic differential geometry, \texorpdfstring{$p$}{}-adic cohomology theories, and \texorpdfstring{$p$}{}-adic integral Hodge theory}
 	
 	\author{Dat Minh Ha}
 	\maketitle
@@ -21,13 +21,62 @@
       \tableofcontents %sort sections alphabetically
     }
     
-    \input{Sections/crystalline cohomology}
+    \part{Arithmetic differential geometry and \texorpdfstring{$p$}{}-adic cohomology theories}
+        \chapter{Crystalline cohomology}
+            \begin{abstract}
+                
+            \end{abstract}
+            
+            \minitoc
+            
+            \input{Chapters/Crystals/crystalline cohomology}
+            
+            \input{Chapters/Crystals/de rham-witt complexes}
+            
+        \chapter{Rigid cohomology}
+            \begin{abstract}
+                
+            \end{abstract}
+            
+            \minitoc
+            
+            \input{Chapters/Rigid cohomology/rigid cohomology over finite fields}
+            
+            \input{Chapters/Rigid cohomology/rigid cohomology over local function fields}
+            
+            \input{Chapters/Rigid cohomology/rigid cohomology over DVRs}
+            
+        \chapter{Arithmetic D-modules}
+            \begin{abstract}
+                
+            \end{abstract}
+            
+            \minitoc
+            
+            \input{Chapters/Arithmetic D-modules/D-modules over finite fields}
+            
+            \input{Chapters/Arithmetic D-modules/D-modules on rigid spaces}
+        
+    \part{Integral \texorpdfstring{$p$}{}-adic Hodge theory}
+        \chapter{\texorpdfstring{$\A_{\inf}$}{}-cohomology}
+            \begin{abstract}
+                
+            \end{abstract}
+            
+            \minitoc
     
-    \input{Sections/arithmetic D-modules}
-    
-    \input{Sections/rigid cohomology}
-    
-    \input{Sections/prismatic cohomology}
+        \chapter{Prismatic cohomology}
+            \begin{abstract}
+                
+            \end{abstract}
+            
+            \minitoc
+            
+            \input{Chapters/Prisms/q-de rham cohomology}
+            
+            \input{Chapters/Prisms/prismatic cohomology}
+            
+            \input{Chapters/Prisms/prismatisation}
 	
 	\addcontentsline{toc}{section}{References}
 	\printbibliography
