Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -33,19 +33,6 @@
             
             \input{Chapters/Crystals/de rham-witt complexes}
             
-        \chapter{Rigid cohomology}
-            \begin{abstract}
-                
-            \end{abstract}
-            
-            \minitoc
-            
-            \input{Chapters/Rigid cohomology/rigid cohomology over finite fields}
-            
-            \input{Chapters/Rigid cohomology/rigid cohomology over local function fields}
-            
-            \input{Chapters/Rigid cohomology/rigid cohomology over DVRs}
-            
         \chapter{Arithmetic D-modules}
             \begin{abstract}
                 
@@ -53,9 +40,25 @@
             
             \minitoc
             
-            \input{Chapters/Arithmetic D-modules/D-modules over finite fields}
+            \input{Chapters/Arithmetic D-modules/D-modules on schemes over perfect fields}
             
-            \input{Chapters/Arithmetic D-modules/D-modules on rigid spaces}
+            \input{Chapters/Arithmetic D-modules/isocrystals}
+            
+            \input{Chapters/Arithmetic D-modules/D-modules on rigid spaces over local function fields}
+            
+        \chapter{Rigid cohomology}
+            \begin{abstract}
+                
+            \end{abstract}
+            
+            \minitoc
+            
+            \input{Chapters/Rigid cohomology/rigid cohomology for schemes over perfect fields}
+            
+            \input{Chapters/Rigid cohomology/rigid cohomology for p-adic formal schemes}
+            
+            \input{Chapters/Rigid cohomology/rigid cohomology for rigid spaces over local function fields}
+        
         
     \part{Integral \texorpdfstring{$p$}{}-adic Hodge theory}
         \chapter{\texorpdfstring{$\A_{\inf}$}{}-cohomology}
