--- a/commands.tex
+++ b/commands.tex
@@ -210,6 +210,7 @@
 \newcommand{\Noohi}{\mathrm{Noohi}} %category of Noohi groups
 \newcommand{\Inf}{\mathrm{Inf}}
 \newcommand{\LPar}{\mathrm{LPar}} %Langlands parameters
+\newcommand{\ORig}{\mathrm{ORig}} %overconvergent sites
 
 \newcommand{\Aut}{\mathrm{Aut}}
 \newcommand{\Inn}{\mathrm{Inn}}
@@ -363,6 +364,7 @@
 \newcommand{\scrN}{\mathscr{N}}
 \newcommand{\scrP}{\mathscr{P}}
 \newcommand{\frakS}{\mathfrak{S}}
+\newcommand{\frakT}{\mathfrak{T}}
 \newcommand{\calI}{\mathcal{I}}
 \newcommand{\calJ}{\mathcal{J}}
 \newcommand{\scrK}{\mathscr{K}}
@@ -389,6 +391,8 @@
 \newcommand{\frakU}{\mathfrak{U}}
 \newcommand{\frakR}{\mathfrak{R}}
 \newcommand{\rmC}{\mathrm{C}}
+\newcommand{\frakP}{\mathfrak{P}}
+\newcommand{\frakQ}{\mathfrak{Q}}
 
 \newcommand{\aff}{\mathrm{aff}}
 \newcommand{\ft}{\mathrm{ft}} %finite type
@@ -418,6 +422,7 @@
 \newcommand{\Zar}{\mathrm{Zar}}
 \newcommand{\fppf}{\mathrm{fppf}}
 \newcommand{\fpqc}{\mathrm{fpqc}}
+\newcommand{\orig}{\mathrm{orig}} %overconvergent topology
 \newcommand{\smooth}{\mathrm{sm}}
 \newcommand{\sh}{\mathrm{sh}}
 \newcommand{\op}{\mathrm{op}}
