Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 	
 	{
       \hypersetup{} 
-      %\dominitoc
+      \dominitoc
       \tableofcontents %sort sections alphabetically
     }
     
@@ -40,7 +40,7 @@
             
             \minitoc
             
-            \input{Chapters/Arithmetic D-modules/D-modules on schemes over perfect fields}
+            \input{Chapters/Arithmetic D-modules/D-modules on schemes of positive characteristics}
             
             \input{Chapters/Arithmetic D-modules/isocrystals}
             
@@ -75,11 +75,24 @@
             
             \minitoc
             
-            \input{Chapters/Prisms/q-de rham cohomology}
-            
             \input{Chapters/Prisms/prismatic cohomology}
             
             \input{Chapters/Prisms/prismatisation}
+            
+            \input{Chapters/Prisms/dieudonne theory}
+            
+        \begin{appendices}
+            \chapter{Perfectoid spaces}
+                \begin{abstract}
+                    
+                \end{abstract}
+                
+                \minitoc
+                
+                \input{Chapters/Appendices/Perfectoid spaces/perfect rings and p-rings}
+                
+                \input{Chapters/Appendices/Perfectoid spaces/perfectoid spaces}
+        \end{appendices}
 	
 	\addcontentsline{toc}{section}{References}
 	\printbibliography
