Updates from Overleaf

--- a/commands.tex
+++ b/commands.tex
@@ -432,7 +432,7 @@
 \newcommand{\alg}{\mathrm{alg}}
 \newcommand{\sober}{\mathrm{sober}}
 \newcommand{\dR}{\mathrm{dR}}
-\newcommand{\rad}{\mathfrak{rad}}
+\newcommand{\rad}{\mathrm{rad}}
 \newcommand{\discrete}{\mathrm{discrete}}
 %\newcommand{\add}{\mathrm{add}}
 %\newcommand{\lin}{\mathrm{lin}}
@@ -450,6 +450,7 @@
 \newcommand{\affd}{\mathrm{affd}}
 %\newcommand{\adic}{\mathrm{adic}}
 \newcommand{\pre}{\mathrm{pre}}
+\newcommand{\coperf}{\mathrm{coperf}}
 \newcommand{\perf}{\mathrm{perf}}
 \newcommand{\perfd}{\mathrm{perfd}}
 \newcommand{\rat}{\mathrm{rat}}
