--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,19 @@
             
             \input{Chapters/Crystals/de rham-witt complexes}
             
+        \begin{appendices}
+            \chapter{de Rham cohomology}
+                \begin{abstract}
+                    
+                \end{abstract}
+                
+                \minitoc
+                
+                \input{Chapters/Appendices/de Rham cohomology/algebraic de rham cohomology}
+                
+                \input{Chapters/Appendices/de Rham cohomology/p-adic de rham cohomology}
+        \end{appendices}
+            
         \chapter{Arithmetic D-modules}
             \begin{abstract}
                 
