Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-	\title{Arithmetic differential geometry, \texorpdfstring{$p$}{}-adic cohomology theories, and \texorpdfstring{$p$}{}-adic integral Hodge theory}
+	\title{Arithmetic differential geometry, \texorpdfstring{$p$}{}-adic cohomology theories, and non-abelian \texorpdfstring{$p$}{}-adic Hodge theory}
 	
 	\author{Dat Minh Ha}
 	\maketitle
@@ -71,15 +71,6 @@
             \input{Chapters/Rigid cohomology/rigid cohomology for p-adic formal schemes}
             
             \input{Chapters/Rigid cohomology/rigid cohomology for rigid spaces over local function fields}
-        
-        
-    \part{Integral \texorpdfstring{$p$}{}-adic Hodge theory}
-        \chapter{\texorpdfstring{$\A_{\inf}$}{}-cohomology}
-            \begin{abstract}
-                
-            \end{abstract}
-            
-            \minitoc
     
         \chapter{Prismatic cohomology}
             \begin{abstract}
@@ -106,6 +97,8 @@
                 
                 \input{Chapters/Appendices/Perfectoid spaces/perfectoid spaces}
         \end{appendices}
+        
+    \part{Non-abelian \texorpdfstring{$p$}{}-adic Hodge theory}
 	
 	\addcontentsline{toc}{section}{References}
 	\printbibliography
