Updates from Overleaf

--- a/commands.tex
+++ b/commands.tex
@@ -141,6 +141,7 @@
 \newcommand{\Stk}{\mathrm{Stk}}
 \newcommand{\Pre}{\mathrm{Pre}}
 \newcommand{\simp}{\mathbf{\Delta}}
+\newcommand{\Res}{\mathrm{Res}}
 \newcommand{\Ind}{\mathrm{Ind}}
 \newcommand{\Pro}{\mathrm{Pro}}
 \newcommand{\Mon}{\mathrm{Mon}}
@@ -204,6 +205,9 @@
 \newcommand{\Ban}{\-\mathrm{Ban}} %Banach spaces
 \newcommand{\Fre}{\-\mathrm{Fre}} %Frechet spaces
 \newcommand{\Ch}{\mathrm{Ch}} %chain complexes
+\newcommand{\Pure}{\mathrm{Pure}}
+\newcommand{\Mixed}{\mathrm{Mixed}}
+\newcommand{\Hodge}{\mathrm{Hodge}} %Hodge structures
 \newcommand{\Mot}{\mathrm{Mot}} %motives
 \newcommand{\KL}{\mathrm{KL}} %category of Kazhdan-Lusztig modules
 \newcommand{\Pres}{\mathrm{Pres}} %presentable categories
@@ -373,9 +377,10 @@
 \newcommand{\scrW}{\mathscr{W}}
 \newcommand{\bbS}{\mathbb{S}}
 \newcommand{\scrH}{\mathscr{H}}
+\newcommand{\bfA}{\mathbf{A}}
 \newcommand{\bfB}{\mathbf{B}}
+\newcommand{\bfC}{\mathbf{C}}
 \newcommand{\Witt}{W}
-%\newcommand{\bfA}{\mathbf{A}}
 \renewcommand{\O}{\mathbb{O}}
 \newcommand{\calV}{\mathcal{V}}
 \newcommand{\scrR}{\mathscr{R}} %radical
@@ -432,7 +437,7 @@
 \newcommand{\alg}{\mathrm{alg}}
 \newcommand{\sober}{\mathrm{sober}}
 \newcommand{\dR}{\mathrm{dR}}
-\newcommand{\rad}{\mathrm{rad}}
+\newcommand{\rad}{\mathfrak{Rad}}
 \newcommand{\discrete}{\mathrm{discrete}}
 %\newcommand{\add}{\mathrm{add}}
 %\newcommand{\lin}{\mathrm{lin}}
