--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,8 @@
       \tableofcontents %sort sections alphabetically
     }
     
+    \input{Chapters/introduction}
+    
     \part{Arithmetic differential geometry and \texorpdfstring{$p$}{}-adic cohomology theories}
         \chapter{Crystalline cohomology}
             \begin{abstract}
@@ -44,6 +46,21 @@
                 \input{Chapters/Appendices/de Rham cohomology/algebraic de rham cohomology}
                 
                 \input{Chapters/Appendices/de Rham cohomology/p-adic de rham cohomology}
+                
+            \chapter{Complex Hodge theory (after Deligne)}
+                \begin{abstract}
+                    
+                \end{abstract}
+                
+                \minitoc
+                
+                \input{Chapters/Appendices/Complex Hodge theory/hodge structures}
+                
+                \input{Chapters/Appendices/Complex Hodge theory/periods}
+                
+                \input{Chapters/Appendices/Complex Hodge theory/rational shimura varieties}
+                
+                \input{Chapters/Appendices/Complex Hodge theory/algebraic cycles}
         \end{appendices}
             
         \chapter{Arithmetic D-modules}
